# Vietarion-language-version2

./: Cargo.toml  LICENSE  README.md  all.sh  example.vl  game_test.vl  test_loop.vl  test_math.vl  test_memory.vl  test_print.vl  test_real_loop.vl
crates/vl_core/: Cargo.toml
crates/vl_core/src/: compiler.rs  lib.rs  token.rs
crates/vl_vm/: Cargo.toml
crates/vl_vm/src/: lib.rs
src/vl_cli/src/: main.rs
vietarion/: Cargo.toml
vietarion/src/: error.rs  lexer.rs  main.rs  token.rs
vietarion/src/ast/: expr.rs  mod.rs  node.rs  stmt.rs
vietarion/src/parser/: block.rs  mod.rs  parser.rs
vietarion_lang/: all.sh  manager.vl  test.vl  test_chuoi.vl  test_iq.vl  test_math.vlbc
vietarion_lang/crates/vl_bytecode/: Cargo.toml
vietarion_lang/crates/vl_bytecode/src/: lib.rs
vietarion_lang/crates/vl_core/src/: ast.rs  compiler.rs  lexer.rs  parser.rs  token.rs
vietarion_lang/crates/vl_vm/: Cargo.toml
vietarion_lang/crates/vl_vm/src/: lib.rs
vietarion_lang/src/vl_cli/: Cargo.toml
vietarion_lang/src/vl_cli/src/: main.rs
